<resources>
    <string name="app_name">1D1C</string>
    <string name="app_database_name" translatable="false">hrhn.db</string>
    <string name="notification_channel_id" translatable="false">하루하나</string>
    <string name="notification_channel_name" translatable="false">하루하나</string>
    <string name="notification_content">Add challenge of the day!</string>
    <string name="menu_title_today">Today</string>
    <string name="title_today">Challenge of the Day</string>
    <string name="menu_title_past_challenge">Achievements</string>
    <string name="menu_title_storage">Storage</string>
    <string name="setting">Settings</string>
    <string name="message_no_challenge">There’s no today’s challenge yet</string>
    <string name="button_add_challenge">Add</string>
    <string name="message_empty_challenges">There’s no challenge yet!</string>
    <string name="title_check_last_challenge">How was the challenge?</string>
    <string name="title_check_challenge">How was the challenge?</string>
    <string name="button_next">Next</string>
    <string name="message_new_challenge">Let us know\nyour today’s challenge</string>
    <string name="message_edit_challenge">Update your\ntoday’s challenge</string>
    <string name="hint_for_challenge">Today’s habits, things to\n do, quotes, language\nstudy..Anything is fine.</string>
    <string name="button_done">Done</string>

    <!-- onboarding -->
    <string name="app_name_full">1Day\n1Challenge</string>
    <string name="challenge_example_1">Memorization</string>
    <string name="challenge_example_2">Goal of the day</string>
    <string name="challenge_example_3">Build habits</string>
    <string name="challenge_example_4">Quotes</string>
    <string name="challenge_example_5">Language Study</string>
    <string name="challenge_example_6">Self-Reminder</string>
    <string name="app_summary">Feel the Power of Small Wins</string>
    <string name="button_start">Start</string>
    <string name="message_onboarding_notification">Enable\nNotifications</string>
    <string name="message_hrhn_summary">Enable notification so you don’t miss\n to add today’s challenge</string>
    <string name="message_notification_setting_info">* You can change the settings again whenever you want\n* Allow 1D1C access to send you push notifications</string>
    <string name="button_no_alarm">or turn off</string>
    <string name="button_set_alarm">Done</string>

    <!-- setting -->
    <string name="setting_category_notification">NOTIFICATION</string>
    <string name="setting_notification_title">Notification</string>
    <string name="setting_notification_summary">Give you a reminder once a day</string>
    <string name="setting_time_for_notification_title">Notified At</string>

    <string name="setting_category_support">SUPPORT</string>
    <string name="setting_support_title">Support</string>
    <string name="setting_homepage_title">Websites</string>
    <string name="setting_opensource_license_title">Open Source Licenses</string>

    <!-- link -->
    <string name="link_support" translatable="false">https://hrhn.notion.site/d56ff2386c464543bbeb20284e3f3469</string>
    <string name="link_homepage" translatable="false">https://hrhn.notion.site/f7ecd6dca58046b298ad8debfbcc762e</string>
    <string name="link_opensource" translatable="false">https://hrhn.notion.site/2dd3252ad190433392c58f77e975cb18</string>

    <!-- pref key -->
    <string name="key_onboarding_already_shown" translatable="false">key_onboarding_already_shown</string>
    <string name="key_notification_on_off" translatable="false">key_notification_on_off</string>
    <string name="key_notification_hour" translatable="false">key_notification_hour</string>
    <string name="key_notification_minute" translatable="false">key_notification_minute</string>
    <string name="key_challenge_data" translatable="false">key_challenge_data</string>
    <string name="tag_add_challenge" translatable="false">tag_add_challenge</string>
    <string name="tag_review_challenge" translatable="false">tag_review_challenge</string>

    <!-- widget -->
    <string name="today_widget_title">Challenge of the day</string>
    <string name="today_widget_description">Check challenge of the day</string>
    <string name="today_widget_placeholder">Add challenge of the day!</string>

    <!-- storage -->
    <string name="message_empty_storage">바구니에 챌린지가\n없어요</string>
    <string name="storage_description">챌린지를 담아두고 매일 편하게 오늘의 챌린지로 등록하세요</string>
    <string name="message_new_storage_item">담아둘 챌린지를 입력하세요</string>
    <string name="message_edit_storage_item">챌린지를 수정하세요</string>
</resources>