<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/setting_category_notification">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_notifications_24"
            app:key="@string/key_notification_on_off"
            app:summary="@string/setting_notification_summary"
            app:title="@string/setting_notification_title" />

        <com.hrhn.presentation.ui.view.TimePickerPreference
            android:icon="@drawable/ic_clock_24"
            app:allowDividerAbove="true"
            app:title="@string/setting_time_for_notification_title" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/setting_category_support">

        <Preference
            android:icon="@drawable/ic_call_24"
            app:title="@string/setting_support_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/link_support" />
        </Preference>

        <PreferenceScreen
            android:icon="@drawable/ic_language_24"
            app:allowDividerAbove="true"
            app:title="@string/setting_homepage_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/link_homepage" />
        </PreferenceScreen>

        <Preference
            android:icon="@drawable/ic_code_24"
            app:allowDividerAbove="true"
            app:title="@string/setting_opensource_license_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/link_opensource" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>