<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name_full"
            android:textAppearance="@style/HeaderText.Accent"
            app:layout_constraintBottom_toTopOf="@id/tv_app_summary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_app_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_text"
            android:gravity="center"
            android:text="@string/app_summary"
            android:textColor="@color/gray_54"
            android:textSize="@dimen/text_size_body1"
            app:layout_constraintBottom_toTopOf="@id/btn_start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

        <TextView
            android:id="@+id/tv_challenge1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_text"
            android:text="@string/challenge_example_1"
            android:textAppearance="@style/FloatingText"
            app:layout_constraintBottom_toTopOf="@id/tv_challenge2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_challenge2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="@dimen/space_default"
            android:text="@string/challenge_example_2"
            android:textAppearance="@style/FloatingText"
            app:layout_constraintBottom_toTopOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_challenge1" />

        <TextView
            android:id="@+id/tv_challenge3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="@dimen/space_large"
            android:text="@string/challenge_example_3"
            android:textAppearance="@style/FloatingText"
            app:layout_constraintBottom_toTopOf="@id/tv_app_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_challenge4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_default"
            android:text="@string/challenge_example_4"
            android:textAppearance="@style/FloatingText"
            app:layout_constraintBottom_toTopOf="@id/tv_app_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_challenge5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_default"
            android:text="@string/challenge_example_5"
            android:textAppearance="@style/FloatingText"
            app:layout_constraintBottom_toTopOf="@id/tv_challenge6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_summary" />

        <TextView
            android:id="@+id/tv_challenge6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/challenge_example_6"
            android:textAppearance="@style/FloatingText"
            app:layout_constraintBottom_toTopOf="@id/btn_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_challenge5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_start"
            style="@style/LargeButton.Rounded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>